<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="bottom|end"
    android:background="@drawable/bg_sign_up"
    android:alpha="0.6"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="89dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        app:srcCompat="@drawable/logo_sign_up" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="258dp"
        android:layout_height="36dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:text="@string/create_an_account"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintVertical_bias="1.0" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="265dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp">

        <EditText
            android:id="@+id/su_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/name"
            android:inputType="textPersonName" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="265dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp">

        <EditText
            android:id="@+id/su_date"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/date"
            android:inputType="date" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="265dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp">

        <EditText
            android:id="@+id/su_phone"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:maxLength="11"
            android:hint="@string/phone"
            android:inputType="phone" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="265dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp">

        <EditText
            android:id="@+id/su_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="265dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/su_pass"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:drawableRight="@drawable/ic_show_password"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="265dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/su_cpass"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sign_up"
        android:layout_width="278dp"
        android:layout_height="46dp"
        android:layout_gravity="center"
        android:layout_marginBottom="16dp"
        android:text="@string/sign_up"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/backfst"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp"
        android:text="@string/go_main_page_1"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

</LinearLayout>