<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:alpha="0.6"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:background="@drawable/bg_sign_in"
    tools:context=".SignIn">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="127dp"
        android:layout_gravity="center"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="30dp"
        app:srcCompat="@drawable/logo_sign_in" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="322dp"
        android:layout_height="59dp"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:gravity="center"
        android:text="@string/let_s_get_started"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold|italic" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout1"
        android:layout_width="272dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_marginStart="79dp"
        android:layout_marginLeft="79dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="30dp">

        <EditText
            android:id="@+id/si_name"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginBottom="32dp"
            android:hint="@string/si_name"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="272dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginStart="79dp"
        android:layout_marginLeft="79dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="30dp">

        <EditText
            android:id="@+id/si_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:hint="@string/si_email"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="272dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:layout_marginStart="79dp"
        android:layout_marginLeft="79dp"
        android:layout_marginEnd="70dp"
        android:layout_marginRight="70dp"
        android:layout_marginBottom="30dp"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/si_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="22dp"
            android:drawableRight="@drawable/ic_show_password"
            android:hint="@string/si_password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sign_in"
        android:layout_width="207dp"
        android:layout_height="39dp"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp"
        android:text="@string/sign_in"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/backmain"
        android:layout_width="wrap_content"
        android:layout_height="21dp"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp"
        android:text="@string/back_main_page"
        android:textColor="@android:color/black"
        android:textSize="14sp" />

</LinearLayout>